fixed the theatre scroller, the hover effect was clipped

--- a/src/containers/Media/Theatre/widgets/playlist/index.module.scss
+++ b/src/containers/Media/Theatre/widgets/playlist/index.module.scss
@@ -2,8 +2,12 @@
 
 .wrapper {
     display: flex;
-    overflow-x: scroll;
+    
     width: 100%;
+
+    @media only screen and (max-width: '600px') {
+        overflow-x: scroll;
+    }
 }
 
 .title {
